--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
   <hr>
   <a href="Hobbies.html">Hobbies</a>
-  <a href="contact.html">Contact</a>
+  <a href="cv/contact.html">Contact</a>
 
 </body>
 
